--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="row">
                     <div class="col-sm-6 sm-margin-b-60">
                         <div class="margin-b-30">
-                            <h1 class="promo-block-title">Alisa <br/> Portman</h1>
+                            <h1 class="promo-block-title">Jingyi Wang <br/> 王婧祎</h1>
                             <p class="promo-block-text">Web &amp; UI/UX Designer</p>
                         </div>
                         <ul class="list-inline">
