--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="col-sm-6 sm-margin-b-60">
                         <div class="margin-b-30">
                             <h1 class="promo-block-title">Jingyi Wang <br/> 王婧祎</h1>
-                            <p class="promo-block-text">Web &amp; UI/UX Designer</p>
+                            <p class="promo-block-text">a bank with illegal financial practice</p>
                         </div>
                         <ul class="list-inline">
                             <li><a href="#" class="social-icons"><i class="icon-social-facebook"></i></a></li>
