--- a/index.html
+++ b/index.html
@@ -86,15 +86,14 @@
                 <div class="row">
                     <div class="col-sm-6 sm-margin-b-60">
                         <div class="margin-b-30">
-                            <h1 class="promo-block-title">Jingyi Wang <br/> 王婧祎</h1>
-                            <p class="promo-block-text">a bank with illegal financial practice</p>
+                            <h1 class="promo-block-title">Jingyi Wang</h1>
+                            <div style="height: 20px;"></div> <!-- Adjust height as needed -->
+                            <h1 class="promo-block-title">王婧祎</h1>
+
+                            <p class="promo-block-text">a banker with illegal financial practice</p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="#" class="social-icons"><i class="icon-social-facebook"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-twitter"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-dribbble"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-behance"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/jingyi-wang-jill/" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
@@ -120,7 +119,7 @@
                         <div class="section-seperator margin-b-50">
                             <div class="margin-b-50">
                                 <div class="margin-b-30">
-                                    <h2>About Me</h2>
+                                    <h2>Long story short</h2>
                                     <p>I'm Alisa Portman, orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                 </div>
