--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="promo-block-img-wrap">
-                            <img class="promo-block-img img-responsive" src="img/mockup/avatar-01.png" align="Avatar">
+                            <img class="promo-block-img img-responsive" src="img/mockup/出段子到二月.jpg" align="Avatar">
                         </div>
                     </div>
                 </div>
